# CIED-Robotic-Arm-Project

./: README.md
src/cied_robotic_arm_bringup/: CMakeLists.txt  package.xml
src/cied_robotic_arm_bringup/launch/: real_cied_robotic_arm.launch.py  servo_real_cied_robotic_arm.launch.py  servo_sim_cied_robotic_arm.launch.py  sim_cied_robotic_arm.launch.py
src/cied_robotic_arm_controllers/: CMakeLists.txt  cied_robotic_arm_hardware_plugin.xml  package.xml
src/cied_robotic_arm_controllers/config/: cied_robotic_arm_controllers.yaml
src/cied_robotic_arm_controllers/include/cied_robotic_arm_controllers/: cied_robotic_arm_hardware.hpp
src/cied_robotic_arm_controllers/launch/: cied_robotic_arm_controllers.launch.py
src/cied_robotic_arm_controllers/src/: cied_robotic_arm_hardware.cpp
src/cied_robotic_arm_description/: CMakeLists.txt  package.xml
src/cied_robotic_arm_description/launch/: cied_robotic_arm_display.launch.py  cied_robotic_arm_gazebo.launch.py  robot_description.launch.py
src/cied_robotic_arm_description/meshes/: 220MG_SERVO_CHANGED-v1.stl  BASE_ASSEMBLY v4.stl  BASE_ASSEMBLY_v6.stl  BASE_ASSEMBLY_v7.stl  BASE_CONVERTED_EDITED-v6-v1.stl  LD260M_ROTATING_COUPLING-v6.stl  LD260M_Static_Coupling-v5.stl  Link-3-v2.stl  Link-4-v2.stl  Link2_50mm_wrist2_to_wrist1-v3.stl  SHOULDER-v4-v4.stl  Scoopy_sheetMetal-v2.stl  Star_horn-v2.stl  WRIST_SERVO_-LD-20M__Servo-20kg-v2.stl  Wrist1servo_to_Link3_servo_Coupling-v6.stl  Wrist2Scooplinker-v5.stl  base_link-v1.stl  ld-260mg-v4.stl
src/cied_robotic_arm_description/rviz/: rviz_sim.rviz
src/cied_robotic_arm_description/urdf/: cied_robotic_arm.ros2_control.xacro  cied_robotic_arm.xacro  materials.xacro
src/cied_robotic_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/cied_robotic_arm_moveit_config/config/: cied_robotic_arm.ros2_control.xacro  cied_robotic_arm.srdf  cied_robotic_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/cied_robotic_arm_moveit_config/launch/: cied_robotic_arm_moveit.launch.py
src/cied_robotic_arm_moveit_servo/: CMakeLists.txt  package.xml
src/cied_robotic_arm_moveit_servo/config/: cied_robotic_arm_moveit_servo_config.yaml
src/cied_robotic_arm_moveit_servo/include/cied_robotic_arm_moveit_servo/: cied_robotic_arm_joystick_input.h  cied_robotic_arm_keyboard_input.h
src/cied_robotic_arm_moveit_servo/launch/: cied_robotic_arm_moveit_servo.launch.py
src/cied_robotic_arm_moveit_servo/launch/lib/: robot_moveit_config_lib.py
src/cied_robotic_arm_moveit_servo/rviz/: rviz_servo.rviz
src/cied_robotic_arm_moveit_servo/scripts/: joy_test.py
src/cied_robotic_arm_moveit_servo/src/: cied_robotic_arm_joystick_input.cpp  cied_robotic_arm_keyboard_input.cpp  joy_test.cpp  keyboard_test.cpp
src/test_programs/: gamepad_test.c
